# stm32f4_bootloader

./: Cargo.toml  README.md  build.ps1  build.sh  build_all.bat  build_all.rs  init_all.ps1
boot/: Cargo.toml  build.rs  custom.x  device.x  memory.x
boot/src/: main.rs
loader/: Cargo.toml  build.rs  device.x  memory.x
loader/src/: interrupts.rs  led.rs  lib.rs  main.rs  uart.rs  vector_table.rs
stm32f4/: Cargo.toml  device.x
stm32f4/src/: adc1.rs  adc_common.rs  can1.rs  crc.rs  cryp.rs  dac.rs  dbgmcu.rs  dcmi.rs  dma2.rs  ethernet_dma.rs  ethernet_mac.rs  ethernet_mmc.rs  ethernet_ptp.rs  exti.rs  flash.rs  fsmc.rs  gpioa.rs  gpiob.rs  hash.rs  i2c1.rs  iwdg.rs  lib.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs  otg_hs_pwrclk.rs  pwr.rs  rcc.rs  rng.rs  rtc.rs  sdio.rs  spi1.rs  syscfg.rs  tim1.rs  tim10.rs  tim11.rs  (+8 more)
stm32f4/src/adc1/: cr1.rs  cr2.rs  dr.rs  htr.rs  jdr.rs  jofr.rs  jsqr.rs  ltr.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sr.rs
stm32f4/src/adc_common/: ccr.rs  cdr.rs  csr.rs
stm32f4/src/can1/: btr.rs  esr.rs  fa1r.rs  fb.rs  ffa1r.rs  fm1r.rs  fmr.rs  fs1r.rs  ier.rs  mcr.rs  msr.rs  rfr.rs  rx.rs  tsr.rs  tx.rs
stm32f4/src/crc/: cr.rs  dr.rs  idr.rs
stm32f4/src/cryp/: cr.rs  csgcmccmr.rs  csgcmr.rs  din.rs  dmacr.rs  dout.rs  imscr.rs  init.rs  key.rs  misr.rs  risr.rs  sr.rs
stm32f4/src/dac/: cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  dhr12r2.rs  dhr12rd.rs  dhr8r1.rs  dhr8r2.rs  dhr8rd.rs  dor1.rs  dor2.rs  sr.rs  swtrigr.rs
stm32f4/src/dbgmcu/: apb1_fz.rs  apb2_fz.rs  cr.rs  idcode.rs
stm32f4/src/dcmi/: cr.rs  cwsize.rs  cwstrt.rs  dr.rs  escr.rs  esur.rs  icr.rs  ier.rs  mis.rs  ris.rs  sr.rs
stm32f4/src/dma2/: hifcr.rs  hisr.rs  lifcr.rs  lisr.rs  st.rs
stm32f4/src/ethernet_dma/: dmabmr.rs  dmachrbar.rs  dmachrdr.rs  dmachtbar.rs  dmachtdr.rs  dmaier.rs  dmamfbocr.rs  dmaomr.rs  dmardlar.rs  dmarpdr.rs  dmarswtr.rs  dmasr.rs  dmatdlar.rs  dmatpdr.rs
stm32f4/src/ethernet_mac/: maca0hr.rs  maca0lr.rs  maca1hr.rs  maca1lr.rs  maca2hr.rs  maca2lr.rs  maca3hr.rs  maca3lr.rs  maccr.rs  macdbgr.rs  macfcr.rs  macffr.rs  machthr.rs  machtlr.rs  macimr.rs  macmiiar.rs  macmiidr.rs  macpmtcsr.rs  macsr.rs  macvlantr.rs
stm32f4/src/ethernet_mmc/: mmccr.rs  mmcrfaecr.rs  mmcrfcecr.rs  mmcrgufcr.rs  mmcrimr.rs  mmcrir.rs  mmctgfcr.rs  mmctgfmsccr.rs  mmctgfsccr.rs  mmctimr.rs  mmctir.rs
stm32f4/src/ethernet_ptp/: ptpppscr.rs  ptpssir.rs  ptptsar.rs  ptptscr.rs  ptptshr.rs  ptptshur.rs  ptptslr.rs  ptptslur.rs  ptptssr.rs  ptptthr.rs  ptpttlr.rs
stm32f4/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
stm32f4/src/flash/: acr.rs  cr.rs  keyr.rs  optcr.rs  optkeyr.rs  sr.rs
stm32f4/src/fsmc/: bcr.rs  btr.rs  bwtr.rs  eccr2.rs  eccr3.rs  patt2.rs  patt3.rs  patt4.rs  pcr.rs  pio4.rs  pmem2.rs  pmem3.rs  pmem4.rs  sdcmr.rs  sdcr1.rs  sdcr2.rs  sdrtr.rs  sdsr.rs  sdtr1.rs  sdtr2.rs  sr.rs
stm32f4/src/gpioa/: afrh.rs  afrl.rs  bsrr.rs  idr.rs  lckr.rs  moder.rs  odr.rs  ospeedr.rs  otyper.rs  pupdr.rs
updater/: Cargo.toml  build.rs  memory.x
updater/src/: interrupts.rs  main.rs  uart.rs  vector_table.rs
(+345 files in other folders)
