[workspace]
members = [
    "boot",
    "loader",
    "updater",
    "application",
]

exclude = [
    "shared",
    "drivers",
]

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", default-features = false }
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.dev]
opt-level = "z"