[workspace]
members = [
    "boot",
    "loader",
    "updater",
    "application",
    "stm32f4",
    "misc"
]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
panic-halt = "0.2.0"
stm32f4 = { path = "./stm32f4", features = ["rt", "critical-section"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = "z"
panic = "abort"