[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
stm32f4 = { workspace = true, features = ["rt"] }
misc = { path = "../misc" }

[features]
default = []