[package]
name = "stm32f4"
version = "0.1.0"
edition = "2021"
description = "Low-level register access for stm32f4"

[dependencies]
bare-metal = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.3"
critical-section = "1.0"

[features]
rt = ["cortex-m-rt"]
critical-section = []