[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
stm32f4 = { workspace = true }

aes = "0.8.2"
cipher = { version = "0.4.4", features = ["alloc"] }
cmac = "0.7.2"
heapless = "0.7.16"